--- a/package.json
+++ b/package.json
@@ -1,8 +1,13 @@
 {
-	"name": "slowmotion",
-	"version": "0.1.1",
-	"license": "MIT",
-	"homepage": "https://github.com/CCDirectLink/CCSlowmotion",
-	"description": "Turns your C key into a slowmotion controller.",
-	"main": "mod.js"
+  "name": "slowmotion",
+  "version": "0.1.1",
+  "license": "MIT",
+  "homepage": "https://github.com/CCDirectLink/CCSlowmotion",
+  "description": "Turns your C key into a slowmotion controller",
+  "module": true,
+  "prestart": "prestart.js",
+  "main": "poststart.js",
+  "ccmodDependencies": {
+    "crosscode": "^1.1.0"
+  }
 }
