--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.1",
   "license": "MIT",
   "homepage": "https://github.com/CCDirectLink/CCSlowmotion",
-  "description": "Turns your C key into a slowmotion controller",
+  "description": "Turns your X key into a slowmotion controller",
   "module": true,
   "prestart": "prestart.js",
   "main": "poststart.js",
